Sat Oct 23 arton	
 *ext/rjb.c
	RJV_VERSION -> 1.3.0
	add loaded? class method.
	add add_classpath method (add jars without invoking load method)
 *ext/load.c
	OSX default jvm name changes to "JavaVM" (bug#28667 reported by Jeff Adams, thanks Jeff !)
 *ext/extconf.rb
	OSX javahome set to /System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK
 *lib/rjbextension.rb
	use Rjb::add_classpath method instead of Kernel's class vars.
 *test/test.rb, test/exttest.rb
	fix add_jar test, previous version load them from jp directory.
Tue Sep 22 arton
 *ext/rjb.c
	RJV_VERSION -> 1.2.10
	add add_jars method. add_jar and add_jars can take an array of jars.
 *test/test.rb
	add calling add_jar with an array test.
Tue Sep 21 arton
 *ext/rjb.h
	export ClassLoader methods
 *ext/load.c
	move ClassLoader interaction codes into rjb.c
 *ext/rjb.c
	RJV_VERSION -> 1.2.9
	add add_jar method.
	loading classes throgh URLClassLoader if the user add Jars
 *lib/rjb.rb
	change MODIFIER module into a constant. Because it implys Rjb::import.
	change Config -> RbConfig for 1.9
 *test/test.rb
	add Rjb::add_jar test
 *test/JarTest.java
 *test/jartest.jar
	add for Rjb::add_jar test
Fri Sep 17 arton
 *test/test.rb
	sort arguments order for test_java_methods (the order is implement dependent)
	add fixnum conversion test for 64bit platform (test_64fixnum)
 *ext/rjb.c
	RJV_VERSION -> 1.2.8
	fix rv2jlong bug, the solution was suggested by Ary Borenszweig
Sun Aug 29 arton
 *ext/rjb.c
	ignore no arguments method signature.
	name base classes under Rjb module.
 *lib/rjb.rb
	implements public_methods and methods
 *test/test.rb
	add non arguments method sig test
	add methods, public_methods, java_methods test
Thu Jul 22 arton
 *ext/rjb.c
	RJB_VERSION -> 1.2.6
	export jv2rv for rjbexception.c
 *ext/rjb.h
	export jv2rv for rjbexception.c
 *ext/rjbexception.c
	create and keep java exception object for its properties.
 *test/test.rb
	add Exception#cause test
Wed Jun 9 arton
 *ext/load.c