@@ -1,3 +1,6 @@
+Sun Oct 24 arton
+ *sample/filechooser.rb
+	omit Thread use (cause JVM crush with 1.9 and StackOverflow with 1.8)
 Sat Oct 23 arton	
  *ext/rjb.c
 	RJV_VERSION -> 1.3.0
